--- a/src-capacitor/android/app/src/main/res/values/strings.xml
+++ b/src-capacitor/android/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
   <string name="app_name">HiveAuth</string>
   <string name="title_activity_main">HiveAuth</string>
-  <string name="package_name">com.hiveauth.authsigner</string>
-  <string name="custom_url_scheme">com.hiveauth.authsigner</string>
+  <string name="package_name">com.hiveauth.mobile</string>
+  <string name="custom_url_scheme">com.hiveauth.mobile</string>
 </resources>
